--- a/index.html
+++ b/index.html
@@ -773,13 +773,13 @@
               <div class="hero-copy">
                 <div class="kicker" data-i18n="hero.kicker">INVITATION</div>
                 <h1 class="names">
-                  <span id="groomName">Nome do noivo</span>
+                  <span id="groomName">Haseung Song</span>
                   <span class="and">&amp;</span>
-                  <span id="brideName">Nome da noiva</span>
+                  <span id="brideName">Larissa vilas boas de araujo</span>
                 </h1>
                 <p class="meta" id="heroMeta">
-                  2026. 00. 00 (sáb) 00:00<br />
-                  Nome do local
+                  2026. 05. 30 (sáb) 16:30<br />
+                  Rancho do Celso
                 </p>
                 <div class="cta-row">
                   <button class="btn primary" id="btnRSVP" type="button" data-i18n="hero.rsvp">Confirmar presença</button>
