--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                 <h1 class="names">
                   <span id="groomName">Haseung Song</span>
                   <span class="and">&amp;</span>
-                  <span id="brideName">Larissa vilas boas de araujo</span>
+                  <span id="brideName">Larissa Vilas Boas de Araujo</span>
                 </h1>
                 <p class="meta" id="heroMeta">
                   2026. 05. 30 (sáb) 16:30<br />
